configure compiler