@@ -48,7 +48,8 @@
                 <version>3.5.2</version>
                 <configuration>
                     <argLine>
-                        --illegal-access=permit
+                        --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+                        --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
